--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "author": "Willian Justen de Vasconcellos <willianjustenqui@gmail.com> (http://willianjusten.com.br/)",
   "license": "MIT",
   "dependencies": {
-    "history": "^3.0.0",
+    "firebase": "^2.3.2",
+    "history": "^1.13.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "react-router": "^2.4.1"
+    "react-router": "^1.0.1",
+    "reactfire": "^0.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0"
+    "babel-preset-react": "^6.5.0",
+    "webpack": "^1.13.1"
   }
 }
